--- a/kinect_version/benFinder/www/index.html
+++ b/kinect_version/benFinder/www/index.html
@@ -1,15 +1,38 @@
 <html>
 <head>
+<title>BenFinder</title>
+<style>
+.imcap {float:left}
+.newline {clear:both}
+</style>
 </head>
 <body>
-<h1> BenFinder - Breathing Detection using Kinect</h1>
-<a href="/rawImg">
-  <img id="rawImg" src="/rawImg" alt="raw image" width="320" height="240">
-</a>
-<a href="/chartImg">
-  <img id="chartImg" src="/chartImg" alt="chart image" width="300" height="240">
-</a>
-<div style="font-size:250%;" id="summaryData">Summary Data </div>
+  <h1> BenFinder - Breathing Detection using Kinect</h1>
+  <div class="newline">
+    <div class="imcap">
+      <a href="/rawImg">
+	<b>Raw Image</b><br>
+	<img id="rawImg" src="/rawImg" alt="raw image" width="320" height="240">
+      </a>
+    </div>
+    <div class="imcap">
+    <a href="/maskedImg">
+      <b>Processed Image</b><br>
+      <img id="maskedImg" src="/maskedImg" alt="masked image" width="320" height="240">
+    </a>
+    </div>
+  </div>
+  <div class="newline">
+    <div class="imcap">
+      <a href="/chartImg">
+	<b>Brightness Time Series<b><br>
+	    <img id="chartImg" src="/chartImg" alt="chart image" width="300" height="240">
+      </a>
+    </div>
+    <div style="font-size:250%;" id="summaryData">Summary Data </div>
+  </div>
+
+<!-- ---------------------------------------------- -->
 
 <script src=/static/jquery-1.10.2.min.js></script>
 <script>
@@ -23,6 +46,7 @@ function refreshPage() {
       $("#summaryData").html("Rate="+data['rate']+" bpm");
    d = new Date();
    $("#rawImg").attr("src", "/rawImg?"+d.getTime());
+   $("#maskedImg").attr("src", "/maskedImg?"+d.getTime());
    $("#chartImg").attr("src", "/chartImg?"+d.getTime());
 });
 }
