trying updating something to confirm it works.

--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@ title: Contact Information
     <address>
         <p><strong>{{site.author}}</strong></p>
 
-        <p><i class="icon-phone"></i> 1-555-123-1234<br/>
+        <p>If you would like any information about this project, or have
+	  any suggestions for improvements, please contact me:<br/>
         <i class="icon-mail"></i> <a href="mailto:{{site.author_email}}">{{site.author_email}}</a></p>
     </address>
 </section>
