Added a 'next steps' section

--- a/index.html
+++ b/index.html
@@ -32,12 +32,20 @@ The current prototype system comprises two halves:
 </ul>
 
 <h2>Current Status</h2>
-At the moment it is a functioning prototype - it can detect that I am breathing,
+At the moment it is a functioning prototype breathing detector / alarm - it can detect that I am breathing,
  and alarm if I can hold my breath long enough (it is using a 30 second time 
 series, and it is hard to stay perfectly still for that long!).
 The benTV digital video monitors talk to the web interface to display the 
 results and display alarms by chaning colour (I don't trust it enough yet to 
 make an audible alarm in the night...).
+
+<h2>Next Steps</h2>
+<ul>
+  <li>Soak test the current system to see how often it raises false alarms, then modify as necessary.</li>
+  <li>Extend the current system to do frequency analysis to see the frequencies of movement - this may allow me to get towards detecting the shaking associated with a seizure.</li>
+  <li>Add an audible alarm to the video monitors</li>
+  <li>Write an Android Application so it can work on a portable device such as a tablet computer.</li>
+</ul>
 
 
 
