Added 'News' section to main page.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ make an audible alarm in the night...).
 
 
 <!-- Show last 5 posts here -->
-<!--
+<h2>Latest News</h2>
 {% for post in site.posts limit: 5  %}
 	<article>
 
@@ -66,4 +66,4 @@ make an audible alarm in the night...).
 
 	</article>
 {% endfor %}
--->
+
