Development of mobile web bsed version - now has visual and audibe alarm.

--- a/kinect_version/benFinder/www/android2.html
+++ b/kinect_version/benFinder/www/android2.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="css/jquery.mobile-1.4.2.min.css">
 <script src="js/jquery.js"></script>
 <script src="js/jquery.mobile-1.4.2.min.js"></script>
-
+<script src="js/jBeep.js"></script>
 <link rel="stylesheet" href="android.css">
 <script src="android2.js"></script>
 
@@ -31,7 +31,7 @@
 	     href="#singleImg" 
 	     data-transition="slide">
 	    <b>Raw Image</b><br>
-	    <img id="rawImg" src="/img/raw_img.png" alt="raw image" width="320" height="240">
+	    <img id="rawImg" src="" alt="raw image" width="320" height="240">
 	  </a>
 	</div>
 	<div class="imcap">
@@ -39,7 +39,7 @@
 	     href="#singleImg?img=masked" 
 	     data-transition="slide">
 	    <b>Processed Image</b><br>
-	    <img id="maskedImg" src="/img/masked_img.png" alt="masked image" width="320" height="240">
+	    <img id="maskedImg" src="" alt="masked image" width="320" height="240">
 	  </a>
 	</div>
       </div>
@@ -49,7 +49,7 @@
 	     href="#singleImg?img=chart" 
 	     data-transition="slide">
 	    <b>Brightness Time Series</b><br>
-	    <img id="chartImg" src="/img/chart_img.png" alt="chart image" width="300" height="240">
+	    <img id="chartImg" src="" alt="chart image" width="300" height="240">
 	  </a>
 	</div>
 	<div class="imcap">
@@ -77,7 +77,7 @@
       <p> Single Image </p>
       <a class="homeLink" href="#home" data-transition="slide">Home</a>
 	<div class="imcap">
-	  <img id="imgDiv" src="/img/chart_img.png" alt="chart image">
+	  <img id="imgDiv" src="" alt="chart image">
 	</div>
     </div>
   </div>
