--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ make an audible alarm in the night...).
 
 <h3>Pebble Watch Version</h3>
 Functioning prototpype comprising an app running on the watch to do analysis, and send analysis results to android phone.   The android app acts as a web server so client devices can see the results and raise alarms as necessary.
-<img widht="400" src="https://raw.githubusercontent.com/jones139/OpenSeizureDetector/master/pebble_version/Documentation/diagram.jpg"/>
+<img width="400" src="https://raw.githubusercontent.com/jones139/OpenSeizureDetector/master/pebble_version/Documentation/diagram.jpg"/>
 
 <h2>Next Steps</h2>
 <h3>Kinect Version</h3>
